--- a/lib/styles/global/core/_spacing.scss
+++ b/lib/styles/global/core/_spacing.scss
@@ -1,4 +1,4 @@
-
+// TODO: Are these based on anything or are they legacy?
 $spacer: 1.2rem !default;
 $spacer-0: 0;
 $spacer-1: ($spacer * .25);
@@ -10,3 +10,20 @@ $spacer-5: ($spacer * 3);
 $padding-base-vertical: $spacer-3;
 $padding-base-horizontal: $spacer-5;
 $headings-margin-bottom: ($spacer / 2) !default;
+
+// TODO: Based on spacer-x etc, are these meaningful intervals?
+$spacing-intervals: (
+  'none': 0,    // 0
+  'tiny': .25,  // ~5px
+  'small': .5,  // ~10px
+  'medium': 1,  // ~20px
+  'large': 1.5, // ~30px
+  'huge': 3     // ~60px
+);
+
+@function spacing($interval) {
+  @if type-of($interval) == 'string' {
+    @return $spacer * map-get($spacing-intervals, $interval);
+  }
+  @return $spacer * $interval;
+}
