--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -1,6 +1,2 @@
 @import "global/default";
-@import "components/button";
-@import "components/icons";
-@import "components/inputs";
-@import "components/sidemenu";
-@import "components/node";
+@import "components/all";
