--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -56,6 +56,10 @@
       }
     }
 
+    &__error {
+      position: absolute;
+    }
+
     font-family: inherit;
     color: color('white');
     border-bottom: 1px solid color('white');
