--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -11,7 +11,6 @@
 
 @mixin default-input-type {
   @include typography('title-2');
-  font-weight: 700;
 }
 
 
@@ -35,26 +34,25 @@
 
     &__container {
       position: relative;
-    }
+      .#{$input-class}__label {
+        @include typography('title-2');
+        position: absolute;
+        top: 0;
+        left: 0;
 
-    &__label {
-      @include typography('title-2');
-      font-weight: 700;
-      position: absolute;
-      top: 0;
-      left: 0;
+        transition: all 250ms ease-in-out;
+        transform: scale(1) translate(0, 0);
+        transform-origin: left top 0px;
+        pointer-events: none;
+        user-select: none;
+        z-index: 1;
 
-      transition: all 250ms ease-in-out;
-      transform: scale(1) translate(0, 0);
-      transform-origin: left top 0px;
-      pointer-events: none;
-      user-select: none;
-      z-index: 1;
-
-      &--active {
-        transform: scale(.6) translate(0, 60px);
+        &--active {
+          transform: scale(.6) translate(0, 60px);
+        }
       }
     }
+
 
     &__error {
       color: color('tomato');
@@ -72,18 +70,35 @@
   $switch-size: 26px
 ) {
   .#{$checkbox-class} {
-
-
-    @include default-input-type;
     &__container {
       position: relative;
+      cursor: pointer;
 
       &--toggle {
         height: $toggle-height * .5;
         width: $switch-size * 1.5;
         .#{$checkbox-class} {
-          @include reset-input;
+          // @include reset-input;
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          opacity: 0;
+          z-index: 50;
+          cursor: pointer;
+          &:checked + .#{$checkbox-class}__slider {
+            background-color: color('cerulean-blue');
+            &:before {
+              transform: translateX(26px);
+            }
+          }
         }
+      }
+
+      .input__label {
+        position: static;
+        cursor: pointer;
       }
     }
 
@@ -111,21 +126,6 @@
     }
   }
 }
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
 
 @if $export-ui-classes {
   @include text-input;
