--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -70,26 +70,31 @@
   $switch-size: 26px
 ) {
   .#{$checkbox-class} {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+    cursor: pointer;
     &__container {
       position: relative;
       cursor: pointer;
 
-      &--toggle {
-        .#{$checkbox-class} {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          opacity: 0;
-          z-index: 50;
-          cursor: pointer;
-        }
-      }
-
       .input__label {
         position: static;
         cursor: pointer;
+        padding-left: 25px;
+        margin: 0;
+      }
+
+      &--toggle {
+        .#{$checkbox-class} {
+           opacity: 0;
+        }
+        .input__label {
+          padding-left: 0;
+        }
       }
     }
 
