Starting radio button component.

--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -136,7 +136,69 @@
   }
 }
 
+@mixin radio() {
+  .label--radio {
+    position: relative;
+
+    margin: .5rem;
+
+
+    cursor: pointer;
+  }
+  .radio {
+    position: relative;
+
+    margin: 0 1rem 0 0 ;
+
+    cursor: pointer;
+
+    &:before {
+      transition: transform .4s cubic-bezier(.45,1.8,.5,.75);
+      transform: scale(0,0);
+
+      content: "";
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+
+      width: 14px;
+      height: 14px;
+
+
+      background: color('sea-green');
+
+      border-radius: 50%;
+    }
+
+    &:checked {
+      &:before {
+       transform: scale(1,1);
+      }
+    }
+
+    &:after {
+      content: "";
+
+      position: absolute;
+      top: -1px;
+      left: -1px;
+
+      width: 18px;
+      height: 18px;
+
+      background: #fff;
+
+      border: 2px solid color('white');
+      opacity: 0.7;
+      border-radius: 50%;
+    }
+  }
+}
+
 @if $export-ui-classes {
   @include text-input;
   @include checkbox;
+  @include radio;
 }
