Radio button styles.

--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -136,64 +136,57 @@
   }
 }
 
-@mixin radio() {
-  .radio {
-    margin: 0.5rem;
-    input[type="radio"] {
-      position: absolute;
-      opacity: 0;
-      z-index: 50;
-      width: 100%;
-      height: auto;
-      cursor: pointer;
-      + .radio-label {
+@mixin radio(
+  $radio-class: 'radio',
+  $radio-button-size: 1.5em
+) {
+  .#{$radio-class} {
+    position: absolute;
+    opacity: 0;
+    z-index: 50;
+    width: 100%;
+    height: auto;
+    cursor: pointer;
+
+    &__label {
+      color: color('white', 0.7);
+      &:before {
+        content: '';
+        background: transparent;
+        border-radius: 100%;
+        border: 1px solid color('white', 0.7);
+        display: inline-block;
+        width: $radio-button-size;
+        height: $radio-button-size;
+        margin-right: 1em;
+        vertical-align: top;
+        cursor: pointer;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
+      + .#{$radio-class}__label {
+        color: color('white');
         &:before {
-          content: '';
-          background: transparent;
-          border-radius: 100%;
-          border: 1px solid darken(#ccc, 25%);
-          display: inline-block;
-          width: 1.4em;
-          height: 1.4em;
-          position: relative;
-          top: -0.2em;
-          margin-right: 1em;
-          vertical-align: top;
-          cursor: pointer;
-          text-align: center;
-          transition: all 250ms ease;
+          background-color: color('sea-green');
+          box-shadow: inset 0 0 0 4px color('navy-taupe');
         }
       }
-      &:checked {
-        + .radio-label {
-          &:before {
-            background-color: color('sea-green');
-            box-shadow: inset 0 0 0 4px color('navy-taupe');
-          }
+    }
+    &:focus {
+      + .#{$radio-class}__label {
+        &:before {
+          outline: none;
+          border-color: color('sea-green');
         }
       }
-      &:focus {
-        + .radio-label {
-          &:before {
-            outline: none;
-            border-color: color('sea-green');
-          }
-        }
-      }
-      &:disabled {
-        + .radio-label {
-          &:before {
-            box-shadow: inset 0 0 0 4px #ccc;
-            border-color: darken(#ccc, 25%);
-            background: darken(#ccc, 25%);
-          }
-        }
-      }
-      + .radio-label {
-        &:empty {
-          &:before {
-            margin-right: 0;
-          }
+    }
+    &:disabled {
+      + .#{$radio-class}__label {
+        &:before {
+          box-shadow: inset 0 0 0 4px color('white');
+          border-color: color('white', 0.7);
+          background: color('white', 0.7);
         }
       }
     }
