--- a/lib/styles/components/inputs.scss
+++ b/lib/styles/components/inputs.scss
@@ -70,31 +70,36 @@
   $switch-size: 26px
 ) {
   .#{$checkbox-class} {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 50;
+    cursor: pointer;
     &__container {
       position: relative;
       cursor: pointer;
 
-      &--toggle {
-        .#{$checkbox-class} {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          opacity: 0;
-          z-index: 50;
-          cursor: pointer;
-        }
-      }
-
       .input__label {
         position: static;
         cursor: pointer;
+        padding-left: 25px;
+        margin: 0;
+      }
+
+      &--toggle {
+        .#{$checkbox-class} {
+           opacity: 0;
+        }
+        .input__label {
+          padding-left: 0;
+        }
       }
     }
 
     &:checked + .#{$checkbox-class}__slider {
-      background-color: color('cerulean-blue');
+      background-color: color('sea-green');
       &:before {
         transform: translateX(26px);
       }
@@ -131,7 +136,65 @@
   }
 }
 
+@mixin radio(
+  $radio-class: 'radio',
+  $radio-button-size: 1.5em
+) {
+  .#{$radio-class} {
+    position: absolute;
+    opacity: 0;
+    z-index: 50;
+    width: 100%;
+    height: auto;
+    cursor: pointer;
+
+    &__label {
+      color: color('white', 0.7);
+      &:before {
+        content: '';
+        background: transparent;
+        border-radius: 100%;
+        border: 1px solid color('white', 0.7);
+        display: inline-block;
+        width: $radio-button-size;
+        height: $radio-button-size;
+        margin-right: 1em;
+        vertical-align: top;
+        cursor: pointer;
+        transition: all 250ms ease;
+      }
+    }
+    &:checked {
+      + .#{$radio-class}__label {
+        color: color('white');
+        &:before {
+          background-color: color('sea-green');
+          box-shadow: inset 0 0 0 4px color('navy-taupe');
+        }
+      }
+    }
+    &:focus {
+      + .#{$radio-class}__label {
+        &:before {
+          outline: none;
+          border-color: color('sea-green');
+        }
+      }
+    }
+    &:disabled {
+      + .#{$radio-class}__label {
+        &:before {
+          box-shadow: inset 0 0 0 4px color('white');
+          border-color: color('white', 0.7);
+          background: color('white', 0.7);
+        }
+      }
+    }
+  }
+}
+
 @if $export-ui-classes {
   @include text-input;
   @include checkbox;
+  @include radio;
 }
