--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -77,6 +77,7 @@
     height: 100%;
     z-index: 50;
     cursor: pointer;
+
     &__container {
       position: relative;
       cursor: pointer;
@@ -88,13 +89,20 @@
         margin: 0;
       }
 
-      &--toggle {
+      &--toggle,
+      &--context {
         .#{$checkbox-class} {
-           opacity: 0;
+          opacity: 0;
         }
+
         .input__label {
           padding-left: 0;
         }
+      }
+
+      &--context {
+        min-height: 100px;
+        min-width: 100px;
       }
     }
 
@@ -102,6 +110,50 @@
       background-color: color('sea-green');
       &:before {
         transform: translateX(26px);
+      }
+    }
+
+    &__context-button {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100px;
+      width: 100px;
+      background-color: transparent;
+      border-radius: 50%;
+      padding: 2px;
+      border: 3px solid color('sea-green');
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all .3s linear;
+
+      &:after {
+        transition: all .3s linear;
+        position: absolute;
+        top: 6%;
+        left: 6%;
+        content: '';
+        height: 88%;
+        width: 88%;
+        opacity: 0;
+        border-radius: 50%;
+      }
+
+      span {
+        z-index: 5;
+        pointer-events: none;
+      }
+    }
+
+    &:checked + .#{$checkbox-class}__context-button {
+      background-color: transparent;
+
+      &:after {
+        transition: all .3s linear;
+        opacity: 1;
+        background-color: color('sea-green');
       }
     }
 
