--- a/docs/styles/main.scss
+++ b/docs/styles/main.scss
@@ -1,8 +1,87 @@
 @import '../../src/styles/all';
 
 $sidenav-width: 200px;
-$sidenav-padding: spacing-get-value('small');
+$sidenav-padding: 16px;
 $app-content-padding: 70px;
+
+@include type-set(
+  'page-title--large', base,
+  (
+    font-size: 48px,
+    line-height: 56px,
+    width: 100%
+  )
+)
+// PAGE TITLE
+@include type-set(
+  'page-title', base,
+  (
+    font-size: 48px,
+    line-height: 48px,
+    width: 100%
+  )
+)
+
+@include type-set(
+  'page-title--small', base,
+  (
+    font-size: 32px,
+    line-height: 40px,
+    width: 100%
+  )
+)
+
+// PAGE DIVIDER
+@include type-set(
+  'page-divider', base,
+  (
+    font-size: 36px,
+    border-bottom: 1px solid color('shades-300'),
+    line-height: 42px,
+    padding: 24px 0 16px,
+    margin-bottom: 24px,
+    width: 100%
+  )
+)
+@include type-set('page-divider', medium, (font-size: 36px));
+
+@include type-set(
+  'page-divider--small', base,
+  (
+    font-size: 20px,
+    border-bottom: 1px solid color('shades-300'),
+    line-height: 28px,
+    padding: 24px 0 16px,
+    margin-bottom: 12px,
+    width: 100%
+  )
+)
+@include type-set('page-divider', medium, (font-size: 36px));
+
+// SECTION HEADER LARGE
+@include type-set(
+  'section-header--large', base,
+  (
+    font-size: 28px,
+    line-height: 30px,
+    width: 100%
+  )
+)
+@include type-set('section-header--large', medium, (font-size: 30px));
+
+// SECTION HEADER SMALL
+@include type-set(
+  'section-header--small', base,
+  (
+    font-size: 20px,
+    line-height: 25px,
+    width: 100%,
+    padding-top: 48px
+  )
+)
+@include type-set('section-header--small', medium, (font-size: 24px));
+
+@include typography-classes;
 
 .app {
   width: 100%;
@@ -44,6 +123,31 @@ $app-content-padding: 70px;
   width: $sidenav-width;
   padding: 0 $sidenav-padding;
   background-color: palette('light-background');
+  z-index: 500;
+}
+
+.mobilenav {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 48px;
+  background-color: palette('light-background');
+  z-index: 50;
+
+  &__menu-toggle {
+    position: absolute;
+    top: 12px;
+    right: 8px;
+    font-size: 14px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: palette('white');
+  }
+
+  @include breakpoint('medium') {
+    display: none;
+  }
 }
 
 .color {
@@ -56,6 +160,12 @@ $app-content-padding: 70px;
   }
 
   @include color-modifiers;
+}
+
+.typography {
+  &__sample {
+    color: palette('divider');
+  }
 }
 
 .icon[name="add-a-context"] {
