--- a/src/styles/components/sidemenu.scss
+++ b/src/styles/components/sidemenu.scss
@@ -15,7 +15,7 @@
 
     &__heading {
       @include typography('title-1');
-      color: color('charcoal');
+      color: color('white');
       text-align: left;
     }
 
