--- a/lib/styles/components/inputs.scss
+++ b/lib/styles/components/inputs.scss
@@ -4,23 +4,26 @@
 @import "../global/default";
 
 @mixin reset-input {
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+  opacity: 0;
 }
 
 @mixin default-input-type {
-  @include typography('title-2');
+  @include typography('title-5');
 }
-
 
 @mixin text-input (
   $input-class: 'input'
 ) {
   .#{$input-class} {
-
-    @include reset-input;
-    @include default-input-type;
+    -webkit-appearance: none;
+    border: 0;
+    background: none;
     position: relative;
     width: 100%;
     height: 100%;
@@ -35,7 +38,6 @@
     &__container {
       position: relative;
       .#{$input-class}__label {
-        @include typography('title-2');
         position: absolute;
         top: 0;
         left: 0;
@@ -53,7 +55,6 @@
       }
     }
 
-
     &__error {
       color: color('tomato');
     }
@@ -65,9 +66,7 @@
 }
 
 @mixin checkbox(
-  $checkbox-class: 'checkbox',
-  $toggle-height: 34px,
-  $switch-size: 26px
+  $checkbox-class: 'checkbox'
 ) {
   .#{$checkbox-class} {
     position: absolute;
@@ -77,6 +76,7 @@
     height: 100%;
     z-index: 50;
     cursor: pointer;
+
     &__container {
       position: relative;
       cursor: pointer;
@@ -87,31 +87,97 @@
         padding-left: 25px;
         margin: 0;
       }
-
-      &--toggle {
-        .#{$checkbox-class} {
-           opacity: 0;
-        }
-        .input__label {
-          padding-left: 0;
-        }
-      }
     }
+  }
+}
 
-    &:checked + .#{$checkbox-class}__slider {
-      background-color: color('sea-green');
-      &:before {
-        transform: translateX(26px);
-      }
-    }
+@mixin radio(
+  $radio-class: 'radio',
+  $radio-button-size: 1.5em
+) {
+  .#{$radio-class} {
+    @include reset-input;
+    cursor: pointer;
 
-    &__toggle {
-      height: $toggle-height * .5;
-      width: $switch-size * 1.5;
+    &__container {
       position: relative;
     }
 
+    &__label {
+      color: color('white', 0.7);
+      &:before {
+        content: '';
+        background: transparent;
+        border-radius: 100%;
+        border: 1px solid color('white', 0.7);
+        display: inline-block;
+        width: $radio-button-size;
+        height: $radio-button-size;
+        margin-right: 1em;
+        vertical-align: top;
+        cursor: pointer;
+        transition: all 250ms ease;
+      }
+    }
+
+    &:checked {
+      + .#{$radio-class}__label {
+        color: color('white');
+        &:before {
+          background-color: color('sea-green');
+          box-shadow: inset 0 0 0 4px color('navy-taupe');
+        }
+      }
+    }
+
+    &:focus {
+      + .#{$radio-class}__label {
+        &:before {
+          outline: none;
+          border-color: color('sea-green');
+        }
+      }
+    }
+
+    &:disabled {
+      + .#{$radio-class}__label {
+        &:before {
+          box-shadow: inset 0 0 0 4px color('white');
+          border-color: color('white', 0.7);
+          background: color('white', 0.7);
+        }
+      }
+    }
+  }
+}
+
+@mixin toggle(
+  $toggle-class: 'toggle',
+  $toggle-height: 1.5em,
+  $switch-size: 1.5em
+) {
+  .#{$toggle-class} {
+    @include reset-input;
+    cursor: pointer;
+
+    &__container {
+      position: relative;
+
+      .input__label {
+        position: static;
+        cursor: pointer;
+        margin: 0;
+      }
+    }
+
     &__slider {
+      height: $toggle-height * .5;
+      width: $switch-size * 1.5;
+      position: relative;
+      margin: .5em .75em;
+    }
+
+    &__button {
       position: absolute;
       cursor: pointer;
       background-color: transparent;
@@ -133,60 +199,101 @@
         transition: .4s;
       }
     }
+
+    &:checked + .#{$toggle-class}__slider .#{$toggle-class}__button {
+      background-color: color('sea-green');
+
+      @each $color-name, $color-group in $-color-map {
+        @include modifier($color-name) {
+          background-color: color($color-name);
+        }
+      }
+
+      &:before {
+        transform: translateX(26px);
+      }
+    }
   }
 }
 
-@mixin radio(
-  $radio-class: 'radio',
-  $radio-button-size: 1.5em
+@mixin context(
+  $context-class: 'context'
 ) {
-  .#{$radio-class} {
-    position: absolute;
-    opacity: 0;
-    z-index: 50;
-    width: 100%;
-    height: auto;
+  .#{$context-class} {
+    @include reset-input;
     cursor: pointer;
 
-    &__label {
-      color: color('white', 0.7);
-      &:before {
-        content: '';
-        background: transparent;
-        border-radius: 100%;
-        border: 1px solid color('white', 0.7);
-        display: inline-block;
-        width: $radio-button-size;
-        height: $radio-button-size;
-        margin-right: 1em;
-        vertical-align: top;
+
+    &__container {
+      position: relative;
+      min-height: 100px;
+      min-width: 100px;
+
+      .input__label {
+        position: static;
         cursor: pointer;
-        transition: all 250ms ease;
+        margin: 0;
       }
     }
-    &:checked {
-      + .#{$radio-class}__label {
-        color: color('white');
-        &:before {
-          background-color: color('sea-green');
-          box-shadow: inset 0 0 0 4px color('navy-taupe');
+
+    &__button {
+      @include typography('title-5');
+      font-weight: 700;
+
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100px;
+      width: 100px;
+      background-color: transparent;
+      border-radius: 50%;
+      padding: 2px;
+      border: 3px solid color('sea-green');
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all $animation-standard-duration $animation-default-easing;
+
+      @each $color-name, $color-group in $-color-map {
+        @include modifier($color-name) {
+          border: 3px solid color($color-name);
         }
       }
-    }
-    &:focus {
-      + .#{$radio-class}__label {
-        &:before {
-          outline: none;
-          border-color: color('sea-green');
-        }
+
+      &:after {
+        transition: all $animation-standard-duration $animation-default-easing;
+        position: absolute;
+        top: 6%;
+        left: 6%;
+        content: '';
+        height: 88%;
+        width: 88%;
+        opacity: 0;
+        border-radius: 50%;
+      }
+
+      span {
+        z-index: 5;
+        pointer-events: none;
       }
     }
-    &:disabled {
-      + .#{$radio-class}__label {
-        &:before {
-          box-shadow: inset 0 0 0 4px color('white');
-          border-color: color('white', 0.7);
-          background: color('white', 0.7);
+
+    &:checked + .#{$context-class}__button,
+    &:hover + .#{$context-class}__button {
+      background-color: transparent;
+
+      &:after {
+        transition: all $animation-standard-duration $animation-default-easing;
+        opacity: 1;
+        background-color: color('sea-green');
+      }
+
+      @each $color-name, $color-group in $-color-map {
+        @include modifier($color-name) {
+          &:after {
+            background-color: color($color-name);
+          }
         }
       }
     }
@@ -197,4 +304,6 @@
   @include text-input;
   @include checkbox;
   @include radio;
+  @include toggle;
+  @include context;
 }
