--- a/lib/styles/components/sidemenu.scss
+++ b/lib/styles/components/sidemenu.scss
@@ -15,8 +15,7 @@
 
     &__heading {
       @include typography('title-1');
-      @include typography('medium');
-      color: color('charcoal');
+      color: color('white');
       text-align: left;
     }
 
