--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -11,10 +11,9 @@
 
 @mixin default-button-type {
   @include typography('title-2');
-  @include typography('bold');
   letter-spacing: 3px;
   text-transform: uppercase;
-  color: color('white');
+  color: palette('text');
 }
 
 @mixin button (
