--- a/src/styles/components/node.scss
+++ b/src/styles/components/node.scss
@@ -1,7 +1,7 @@
 .node {
   cursor: pointer;
   position: relative;
-  margin: 1rem;
+  margin: 0 0 2rem 2rem;
   width: 150px;
   height: 150px;
   filter: drop-shadow(0 4px 0 transparentize(palette('dark-background'), .25));
