--- a/src/styles/components/button.scss
+++ b/src/styles/components/button.scss
@@ -57,8 +57,8 @@
     }
 
     &__icon {
-      height: 15px;
-      width: 15px;
+      height: 25px !important;
+      width: 25px !important;
 
       // use flexbox to change order of icon and content
       &--right {
