--- a/lib/styles/components/button.scss
+++ b/lib/styles/components/button.scss
@@ -56,9 +56,14 @@
       margin: 0 3rem;
     }
 
+    // light color variations
+    &--white {
+      color: palette('dark-text');
+    }
+
     &__icon {
-      height: 10px;
-      width: 10px;
+      height: 25px !important;
+      width: 25px !important;
 
       // use flexbox to change order of icon and content
       &--right {
