--- a/lib/styles/components/button.scss
+++ b/lib/styles/components/button.scss
@@ -57,8 +57,8 @@
     }
 
     // light color variations
-    &--white {
-      color: palette('dark-text');
+    &--white, &--platinum, &--platinum--dark {
+      color: palette('text-dark');
     }
 
     &__icon {
