--- a/lib/styles/global/core/_color-dictionary.scss
+++ b/lib/styles/global/core/_color-dictionary.scss
@@ -44,7 +44,10 @@
 @include palette-set('light-background', color('cyber-grape'));
 @include palette-set('dark-background', color('rich-black'));
 @include palette-set('modal-main-panel', color('cyber-grape'));
-@include palette-set('modal-overlay', color('rich-black'));
+@include palette-set('modal-overlay', color('rgba(22,21,43, 0.1)'));
+@include palette-set('info', color('sea-green'));
+@include palette-set('warning', color('mustard'));
+@include palette-set('error', color('neon-coral'));
 @include palette-set('headings', color('white'));
 @include palette-set('menu-headings', color('charcoal'));
 @include palette-set('divider', color('platinum--dark'));
