--- a/src/styles/global/core/_color-dictionary.scss
+++ b/src/styles/global/core/_color-dictionary.scss
@@ -55,6 +55,7 @@
 @include palette-set('node-dark', color('neon-coral--dark'));
 @include palette-set('edge-base', color('mustard'));
 @include palette-set('edge-dark', color('mustard--dark'));
+@include palette-set('ring', color('cyber-grape'));
 @include palette-set('graph-tooltip', color('charcoal'));
 @include palette-set('graph-data-1', color('sea-green'));
 @include palette-set('graph-data-2', color('slate-blue'));
