--- a/lib/styles/global/core/_color-dictionary.scss
+++ b/lib/styles/global/core/_color-dictionary.scss
@@ -44,7 +44,7 @@
 @include palette-set('light-background', color('cyber-grape'));
 @include palette-set('dark-background', color('rich-black'));
 @include palette-set('modal-main-panel', color('cyber-grape'));
-@include palette-set('modal-overlay', color('rgba(22,21,43, 0.1)'));
+@include palette-set('modal-overlay', color('rich-black'));
 @include palette-set('info', color('sea-green'));
 @include palette-set('warning', color('mustard'));
 @include palette-set('error', color('neon-coral'));
@@ -55,6 +55,7 @@
 @include palette-set('node-dark', color('neon-coral--dark'));
 @include palette-set('edge-base', color('mustard'));
 @include palette-set('edge-dark', color('mustard--dark'));
+@include palette-set('ring', color('cyber-grape'));
 @include palette-set('graph-tooltip', color('charcoal'));
 @include palette-set('graph-data-1', color('sea-green'));
 @include palette-set('graph-data-2', color('slate-blue'));
