--- a/src/styles/global/core/_animation.scss
+++ b/src/styles/global/core/_animation.scss
@@ -26,6 +26,25 @@ $animation-default-easing: $animation-android-easing;
   }
 }
 
+@keyframes bounce {
+  0% {
+    transform:scale(0);
+    opacity:0;
+  }
+  50% {
+    transform:scale(1.1);
+    opacity:0.4;
+  }
+  75% {
+    transform:scale(0.9);
+    opacity:0.7;
+  }
+  100% {
+    transform:scale(1);
+    opacity:1;
+  }
+}
+
 @mixin animation($animation-name) {
   animation-name: $animation-name;
   animation-duration: $animation-standard-duration;
