Adding toggle group inputs.

--- a/src/styles/components/inputs.scss
+++ b/src/styles/components/inputs.scss
@@ -160,6 +160,12 @@
     @include reset-input;
     cursor: pointer;
 
+    &-group {
+      &__inputs {
+        display: flex;
+      }
+    }
+
     &__container {
       position: relative;
 
